--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.rabbitmq.host=
-spring.rabbitmq.port=
-spring.rabbitmq.username=
-spring.rabbitmq.password=
-spring.rabbitmq.virtual-host=
-spring.rabbitmq.exchange=
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=learn
+spring.rabbitmq.password=123456
+spring.rabbitmq.virtual-host=learn
+spring.rabbitmq.exchange=LEARN_EXCHANGE
